[tool.poetry]
name = "pwh_pyramid_routes"
version = "1.0.0"
description = "Route helpers for Pyramid"
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
decorator = "^4.4.2"
pyramid_jinja2 = "^2.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"
flake8 = "^3.7.9"
flake8-print = "^3.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
